2007-11-21  Stefan Kost  <ensonic@users.sf.net>

	* src/Makefile.am:
	  Use local version to link against when building bmltest_* binaries.

2007-11-21  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	  Free the machine-iface causes a double free here. Disable for now.

2007-11-10  Stefan Kost  <ensonic@users.sf.net>

	* README:
	* TODO:
	* configure.ac:
	* dllwrapper1/wine/Makefile.am:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.h:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.h:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/BuzzMachineLoader.h:
	* src/BuzzMachineLoader/Makefile.am:
	* src/BuzzMachineLoader/debug.cpp:
	* src/BuzzMachineLoader/debug.h:
	* src/Makefile.am:
	* src/bml.c:
	* src/bmltest_info.c:
	* src/bmltest_process.c:
	  Check for CPU arch. Only build dll-wrapper part on x86. Automatically
	  add correct flags for build on 64bit arch. Enable debug logging on the
	  native bml lib. Add some todo about enhancing compatibillity.

2007-10-31  Stefan Kost  <ensonic@users.sf.net>

	* .cvsignore:
	* tests/.cvsignore:
	  More cleaning.

2007-10-31  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/.cvsigore:
	  Add .cvsignore file.

2007-10-31  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* configure.ac:
	* src/BuzzMachineLoader/BuzzMDKHelper.cpp:
	* src/BuzzMachineLoader/BuzzMDKHelper.h:
	* src/BuzzMachineLoader/BuzzMachine.h:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.h:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.h:
	* src/BuzzMachineLoader/BuzzMachineLoader.aps:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/BuzzMachineLoader.h:
	* src/BuzzMachineLoader/BuzzMachineLoader.ncb:
	* src/BuzzMachineLoader/BuzzMachineLoader.rc: